<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">СВОЙ.ЛИД</string>

    <string name="nav_home">Главная</string>
    <string name="nav_slots">Слоты</string>
    <string name="nav_jobs">Задачи</string>
    <string name="nav_earnings">Заработок</string>
    <string name="nav_more">Ещё</string>

    <string name="status_online">Работает</string>
    <string name="status_offline">Не подключено</string>
    <string name="status_paused">На паузе</string>
</resources>
